--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,6 +14,16 @@
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageView
+        android:id="@+id/iv_add_to_favourites"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@android:drawable/btn_star"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintTop_toTopOf="@id/image_view"
+        app:layout_constraintEnd_toEndOf="@id/image_view"/>
+
     <TextView
         android:id="@+id/text_view_title"
         android:layout_width="match_parent"
