--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/icon_home"
         android:title="Home"/>
 
     <item
         android:id="@+id/cartFragment"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/icon_cart"
         android:title="Cart"/>
 
     <item
         android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="Search" />
 
     <item
         android:id="@+id/favouritesFragment"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@android:drawable/btn_star"
         android:title="Favourites" />
 
 
